examples/test/testpolicy19911.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19911
  namespace: namespace228
spec:
  podSelector:
    matchLabels:
      key35: value20
      key0: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value3
      podSelector:
        matchLabels:
          key24: value44
          key26: value45
          key39: value48
